--- a/biografia.html
+++ b/biografia.html
@@ -44,6 +44,8 @@
   <div class="parallax">
   
   </div>
-   
+  <footer id="pie">
+    proyecto en periodo de prueba 2025
+</footer>
 </body>
 </html>
