--- a/contacto.html
+++ b/contacto.html
@@ -42,5 +42,9 @@
 </form>
 <p id="confirmacion" style="display: none;"> Tu mensaje se ha enviado con éxito</p>
 <script src="script.js"></script>
+<br><br><br>
+<footer id="pie">
+    proyecto en periodo de prueba 2025
+</footer>
 </body>
 </html>
