--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <p>según lo que vaya aprendiendo para ponerlo en práctica.</p>
 </section>
 <br><br><br>
-
+<footer id="pie">
+    proyecto en periodo de prueba 2025
+</footer>
 </body>
 </html>
