--- a/portfolio.html
+++ b/portfolio.html
@@ -58,5 +58,8 @@
     </div>
 </section>
     <br><br><br>
+    <footer id="pie">
+        proyecto en periodo de prueba 2025
+    </footer>
 </body>
 </html>
