--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 <br><br><br>
 <div class="container">
-<h2>Bienvenidos a la web de Carlos Ramos</h2>
+<h2>Bienvenidos a la web de Carlos</h2>
 <p>Sientete libre de explorar la web y curiosear todo lo que he hecho hasta ahora. </p>
 <p> Aunque también puedes acceder a mi biografía pulsando <a href="biografia.html">Aquí.</a>  </p>
 <br>
