--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 </div>
 <section class="explicacion">
     <h3><u>Intención de la Web </u></h3>
-    <p>Este prototipo de web es un ejercicio que me ha servido para practicar.</p>
-    <p>No obstante, todavía me queda mucho por aprender, pero es un buen comienzo.</p>
-    <p>Combinar HTML con CSS es un buen plan para tener el código de ambas partes más organizado</p>
-    <p>y más limpio, así se pueden encontrar facilmente que partes entan linkeadas con otras.</p>
-    <p>También he usado un poco de JS para la parte de la animación del menú desplegable o hamburguesa,</p>
-    <p>pero todavía me resulta un poco complicado acordarme de todo. Iré mejorando y actualizando esta web</p>
-    <p>según lo que vaya aprendiendo para ponerlo en práctica.</p>
+    <p>Este prototipo de web es un ejercicio que me ha servido para practicar.
+        No obstante, todavía me queda mucho por aprender, pero es un buen comienzo.
+        Combinar HTML con CSS es un buen plan para tener el código de ambas partes más organizado
+        y más limpio, así se pueden encontrar facilmente que partes entan linkeadas con otras.
+        También he usado un poco de JS para la parte de la animación del menú desplegable o hamburguesa,
+        pero todavía me resulta un poco complicado acordarme de todo. Iré mejorando y actualizando esta web
+        según lo que vaya aprendiendo para ponerlo en práctica.</p>
 </section>
 <br><br><br>
 <footer id="pie">
