--- a/portfolio.html
+++ b/portfolio.html
@@ -46,11 +46,11 @@
     </div>
     <br>
     <div>
-        <h3>Aquí podeis escuchar algunos audios</h3>
+        <h3 class="audios">Aquí podeis escuchar algunos audios</h3>
         <br>
     <audio controls>
-        <source src="/Users/capirg/Documents/THE BRIDGE FUNDAMENTALS/proyecto final/dragonballz.ogg" type="audio/ogg">
-        <source src="/Users/capirg/Documents/THE BRIDGE FUNDAMENTALS/proyecto final/dragonballz.mp3" type="audio/mpeg">
+        <source src="dragonballz.mp3" type="audio/ogg">
+        <source src="dragonballz.mp3" type="audio/mpeg">
       
       </audio>
       <br>
