--- a/biografia.html
+++ b/biografia.html
@@ -26,17 +26,18 @@
 
 <section id="biografia">
 <h1>Biografía</h1>
-  <p> No voy contar toda mi vida porque daría para una película, pero si puedo contar algo sobre mi.</p>
-   <p> Estudie Administración de sistemas y redes allá por el 2009, pero hice un cambio de 360 grados </p>
-   <p>para meterme en la universidad en 2010 a estudiar comunicación audiovisual. Desde que tengo 5 años </p>
-   <p> siempre me ha gustado el cine y contar historias, así que desde 2014 hasta ahora es lo que 
+  <p> No voy contar toda mi vida porque daría para una película, pero si puedo contar algo sobre mi.
+    Estudie Administración de sistemas y redes allá por el 2009, pero hice un cambio de 360 grados 
+   para meterme en la universidad en 2010 a estudiar comunicación audiovisual. Desde que tengo 5 años 
+    siempre me ha gustado el cine y contar historias, así que desde 2014 hasta ahora es lo que 
     he estado haciendo.
   </p>
 <br>
 <h2>Full Stack</h2>
   <p>
     He decidido aventurarme como programador Full Stack porque la tecnología 
-    me gusta y creo que es un camino que tiene un gran futuro por delante.
+    siempre me ha gustado y creo que es un camino que tiene un gran futuro por delante.
+    Eso no significa que ese camino sea fácil, pero es un riesgo que vale la pena correr.
   </p>
 </section>
   <br><br>
