nuevos cambios en todas las paginas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     
 </head>
 <body>
+    
+    <header>
     <nav class="menu">
     <div class="hamburguesa" onclick="toggleMenu()">
         <div></div>
@@ -29,8 +31,11 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-<script src="script.js"></script>
+    <script src="script.js"></script>
+</header>
 
+
+<main>
 <div class="videoReel">
     <iframe id="video" src="https://www.youtube.com/embed/m7yQPP0U4fc?autoplay=1&loop=1&playlist=m7yQPP0U4fc&mute=1&controls=0"
     frameborder="0" 
@@ -40,15 +45,19 @@
 
 </div>
 <br><br><br>
-<div class="container">
+<section id="container">
+    <article>
+     <header>
 <h2>Bienvenidos a la web de Carlos</h2>
-<p>Sientete libre de explorar la web y curiosear todo lo que he hecho hasta ahora. </p>
-<p> Aunque también puedes acceder a mi biografía pulsando <a href="biografia.html">Aquí.</a>  </p>
+</header>
+<p>Sientete libre de explorar la web y curiosear todo lo que he hecho hasta ahora.
+ Aunque también puedes acceder a mi biografía pulsando <a href="biografia.html"> Aquí.</a>  </p>
+</article>
+</section>
 <br>
 <br>
 <hr>
-</div>
-<section class="explicacion">
+<section id="explicacion">
     <h3><u>Intención de la Web </u></h3>
     <p>Este prototipo de web es un ejercicio que me ha servido para practicar.
         No obstante, todavía me queda mucho por aprender, pero es un buen comienzo.
@@ -58,7 +67,10 @@
         pero todavía me resulta un poco complicado acordarme de todo. Iré mejorando y actualizando esta web
         según lo que vaya aprendiendo para ponerlo en práctica.</p>
 </section>
-<br><br><br>
+</main>
+<br>
+<br>
+<br>
 <footer id="pie">
     proyecto en periodo de prueba 2025
 </footer>
