--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,13 @@
         </nav>
     <script src="script.js"></script>
 
-    <h1>Portfolio</h1>
-<section class="container">
-    <p>Aquí encontrareis un pequeño repertorio de imagenes y videos chulos.</p>
+    <section class="contenido">
+        <article>
+        <h1>Portfolio</h1>
+        <p>Aquí encontrareis un pequeño repertorio de imagenes y videos chulos.</p>
+    </article>
 
-    <div class="galeria">
+     <div class="galeria">
             <img src="https://images.pexels.com/photos/4763272/pexels-photo-4763272.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Imagen 1">
             <img src="https://images.pexels.com/photos/1107666/pexels-photo-1107666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Imagen 2">
             <img src="https://images.pexels.com/photos/2510429/pexels-photo-2510429.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Imagen 3">
@@ -36,17 +38,17 @@
             <img src="https://images.unsplash.com/photo-1532800783378-1bed60adaf58?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen 6">
         
             <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/t8AK_4sEZUk" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    allowfullscreen>
-</iframe>
-
-    </div>
+                 src="https://www.youtube.com/embed/t8AK_4sEZUk" 
+                 title="YouTube video player" 
+                 frameborder="0" 
+                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                 allowfullscreen>
+            </iframe>
+     </div>
+    </section>
     <br>
-    <div>
-        <h3 class="audios">Aquí podeis escuchar algunos audios</h3>
+    <section>
+        <h3 id="audios">Audios</h3>
         <br>
     <audio controls>
         <source src="dragonballz.mp3" type="audio/ogg">
@@ -55,7 +57,6 @@
       </audio>
       <br>
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/57bgtoPSgt236HzfBOd8kj?utm_source=generator" width="40%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
 </section>
     <br><br><br>
     <footer id="pie">
