he modificado la parte de javascript para que se entienda mejor

--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
     <button type="submit">Enviar</button>
 </form>
 </section>
-<p id="confirmacion" style="display: none;"> Tu mensaje se ha enviado con éxito</p>
+<p id="confirmacion"> Tu mensaje se ha enviado con éxito!</p>
 <script src="script.js"></script>
 
 <div>
