--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,12 @@
         <article>
     <h1>Contacto</h1> </article>
 
+    <!-- 
+        CORRECCION:
+        + faltan atributos action y method en <form>
+        + Si utilizas labels para indicar que debe insertar el usuario en
+        el input, puedes usar el placeholder para escribir un ejemplo o patrón
+    -->
 <form id="formulario">
     <label for="fname">Nombre</label>
     <input type="text" id="fname" name="fname" placeholder="Nombre" required autofocus>
@@ -51,6 +57,10 @@
 <p id="confirmacion"> Tu mensaje se ha enviado con éxito!</p>
 <script src="script.js"></script>
 
+<!--
+    CORRECCION:
+        No se si lo he comentado en algun otro sitio antes, pero hay varias etiquetas vacías a lo largo de los html, elimina lo que no se use.
+-->
 <div>
     
   </div>
